# MATFWars

./: README.md
MATFWars/: CMakeLists.txt  Canvas.cpp  Canvas.h  Client.cpp  Client.h  Confetti.cpp  Confetti.h  Function.cpp  Function.h  FunctionNode.cpp  FunctionNode.h  GuessGame.cpp  GuessGame.h  Obstacle.cpp  Obstacle.h  ObstacleNode.cpp  ObstacleNode.h  Player.cpp  Player.h  PlayerGuess.cpp  PlayerGuess.h  PlayerNode.cpp  PlayerNode.h  PlayerWar.cpp  PlayerWar.h  Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h  Timer.cpp  Timer.h  WarGame.cpp  WarGame.h  check.cpp  check.h  check.ui  choosedifficulty.cpp  choosedifficulty.h  choosedifficulty.ui  create.cpp  (+42 more)
MATFWars/resources/txt/: leaderboard.txt
MATFWars/server/: CMakeLists.txt  Server.cpp  Server.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
MATFWars/src/: Client.cpp  Function.cpp  Obstacle.h  guessgame.cpp  join.cpp  join.h  mainwindow.ui  warchoose.h  wargame.cpp
MATFWars/tests/: CMakeLists.txt  catch_main.cpp  function_tests.cpp  obstacle_tests.cpp  player_tests.cpp
MATFWars/txt/: leaderboard.txt
specifikacija/Decembar/: Specifikacija..docx  Specifikacija.docx
specifikacija/Novembar/: Specifikacija.docx
